<resources>
    <string name="app_name">LasSalas</string>
    <string-array name="spinner_sala_options">
        <item>Jupiter</item>
        <item>Neptuno</item>
        <item>Venus</item>
        <item>Mercurio</item>
    </string-array>

    <string-array name="spinner_year_options">
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string name="reservar_title">Reservar sala</string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="sala">SALA:</string>
    <string name="fecha">FECHA:</string>
    <string name="horario">HORARIO:</string>
    <string name="disponibilidad">DISPONIBILIDAD:</string>
    <string name="reservar">RESERVAR</string>


</resources>