<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservaSalaActivity"
    tools:ignore="ExtraText">
    <RelativeLayout
        android:id="@+id/laySala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:padding="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp">

    <TextView
        android:text="@string/sala"
        android:id="@+id/salaLabel"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerSala"
        android:layout_below="@+id/salaLabel"
        android:layout_width="match_parent"
        android:dropDownWidth="match_parent"
        android:minHeight="50dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:entries="@array/spinner_sala_options" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laySala"
        android:background="@drawable/custom_border"
        android:padding="8dp"
        android:layout_marginBottom="1dp">

    <TextView
        android:text="@string/fecha"
        android:id="@+id/fechaLabel"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerYear"
        android:layout_below="@+id/fechaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:dropDownWidth="150dp"
        android:dropDownHeight="200dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:minHeight="50dp"
        android:layout_alignParentStart="true"
        android:entries="@array/spinner_year_options" />

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_below="@+id/fechaLabel"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:dropDownWidth="150dp"
        android:dropDownHeight="200dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:minHeight="50dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_below="@+id/fechaLabel"
        android:id="@+id/spinnerDay"
        android:layout_width="wrap_content"
        android:minHeight="50dp"
        android:dropDownWidth="150dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:dropDownVerticalOffset="40dp"
        android:dropDownHeight="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layFecha"
        android:background="@drawable/custom_border"
        android:padding="8dp"
        android:layout_marginBottom="1dp">

    <TextView
        android:text="@string/horario"
        android:id="@+id/horarioLabel"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonhoraIn"
        android:layout_below="@+id/horarioLabel"
        android:layout_width="wrap_content"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:text="@string/entrada"
        android:background="@drawable/border_button"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textHoraIn"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@+id/buttonhoraIn"
        android:layout_below="@+id/horarioLabel"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textHoraOut"
        android:layout_width="wrap_content"
        android:layout_toStartOf="@+id/buttonhoraOut"
        android:layout_below="@+id/horarioLabel"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:minHeight="50dp"

        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonhoraOut"
        android:layout_below="@+id/horarioLabel"
        android:layout_width="wrap_content"
        android:background="@drawable/border_button"
        android:minHeight="50dp"
        android:text="@string/salida"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layDisponibilidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layHorario"
        android:background="@drawable/custom_border"
        android:padding="8dp"
        android:layout_marginBottom="1dp"
        android:layout_above="@+id/reservarButton">

    <TextView
        android:text="@string/disponibilidad"
        android:id="@+id/disponibleLabel"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/disponibleLabel"
        android:layout_marginTop="20dp"
        android:id="@+id/recyclerView_reserva"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    </RelativeLayout>

    <Button
        android:id="@+id/reservarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservar"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_confirm"
        />




</RelativeLayout>
